--- a/ToDoListsApp/Views/Home/Index.cshtml
+++ b/ToDoListsApp/Views/Home/Index.cshtml
@@ -21,11 +21,11 @@
     <div class="col-md-4">
         <h2>Items</h2>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="~/Views/Items/Index.cshtml">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Items/Index">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Lists</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="~/Views/Lists/Index.cshtml">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Lists/Index">Learn more &raquo;</a></p>
     </div>
 </div>
